# context_pager

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  Caddyfile  Dockerfile.dashboard  Dockerfile.keepalive  Dockerfile.mcp  PROJECT_BRIEF.md  README.md  TECH_STACK.md  alembic.ini  docker-compose.yml  pyproject.toml
examples/goldfish_agent/: README.md  agent.py  langgraph.json
keepalive/: main.py
migrations/: 001_init.sql  002_users_tenant_id.sql
migrations/versions/: 001_initial_schema.py
src/context_pager/: __init__.py  config.py  contextvar.py  db.py  deps.py  server.py
src/context_pager/agent/: middleware.py
src/context_pager/auth/: middleware.py
src/context_pager/cache/: decay.py  lru.py
src/context_pager/compression/: pipeline.py
src/context_pager/governance/: middleware.py  pii_middleware.py
src/context_pager/ingestion/: chunker.py  extractor.py
src/context_pager/knowledge/: embedder.py  retriever.py  semantic_router.py
src/context_pager/rate_limit/: middleware.py
src/context_pager/serve/: dashboard.py
src/context_pager/telemetry/: audit.py  cost.py  rollup.py
src/context_pager/tools/: commit_to_long_term_memory.py  compress_document.py  fetch_entity_graph.py
tests/benchmark/: benchmark_results.json  run_benchmark.py
tests/fixtures/: code_audit.py  code_audit_ground_truth.json
tests/fixtures/financial/: acme_corp_2024.txt
tests/fixtures/transcripts/: q3_strategy_review.txt
